[package]
name = "backlight"
version = "0.1.1"
authors = ["Jerko Steiner <jerko.steiner@gmail.com>"]

description = "Rust library for controlling backlight on linux systems via the `/sys/class/backlight` interface."

documentation = "https://github.com/jeremija/backlight.git"
homepage = "https://github.com/jeremija/backlight.git"
repository = "https://github.com/jeremija/backlight.git"
readme = "README.md"

keywords = ["linux", "backlight", "brightness"]
license = "MIT"

